cip-macros/tests/ui/cip_class_missing_name.rs
use cip_macros::cip_class;

#[cip_class(id = ClassCode::Identity)]
struct MyClass {}

fn main() {}
